--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "19.2.3",
     "@primeng/themes": "^19.0.10",
     "@tailwindcss/postcss": "^4.0.15",
+    "moment": "^2.30.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
