add backend-microservices submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "backend-microservices"]
 	path = backend-microservices
-	url = git@git.gft.com:kalo/desafio-microservices.git
+	url = git@github.com:Kassia-Darcie/sistema-de-petshop-com-microservices.git
 	branch = feature/docker
